# ai-review-hook

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.example  .pre-commit-hooks.yaml  BUILD.md  CONTRIBUTING.md  LICENSE  Makefile  PULL_REQUEST.md  README.md  USAGE.md  WARP.md  ai-review-config.json  context_demo.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_sample.py  tox.ini
.github/workflows/: ci.yml  lint.yml
ai_review_hook/: main.py
ai_review_hook.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: Backlog.md
examples/: filetype-prompts.json  glob-prompts.json
src/ai_review_hook/: __init__.py  formatters.py  main.py  reviewer.py  utils.py
tests/: test_file_filtering.py  test_filetype_prompts.py  test_formatters.py  test_glob_pattern_prompts.py  test_main.py  test_output_formats.py  test_reviewer.py  test_sample.py  test_utils.py
